--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "buid:prod": "ng build --prod --base-href \"https://nvanvyve.github.io/FootballUpdates/\""
+    "build:prod": "ng build --configuration production --base-href \"https://nvanvyve.github.io/FootballUpdates/\""
   },
   "private": true,
   "dependencies": {
