--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check lint
+        run: npm run lint
+
       - name: Replace secret
         uses: cschleiden/replace-tokens@v1
         with:
@@ -31,6 +34,7 @@ jobs:
         run: npm run build:prod
 
       - name: Deploy to GitHub Pages
+        if: ${{!contains(github.event.head_commit.message, '[skip deploy]')}}
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: gh-pages
