--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless --code-coverage",
     "build:prod": "ng build --configuration production --base-href \"https://nvanvyve.github.io/FootballUpdates/\"",
     "lint": "ng lint",
     "lint:quiet": "ng lint --quiet",
