--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Check lint
         run: npm run lint
 
-      - name: Test
-        run: npm run test:ci
+#      - name: Test
+#        run: npm run test:ci
