--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular-eslint/builder": "16.2.0",
     "@angular-eslint/eslint-plugin": "16.2.0",
     "@angular-eslint/eslint-plugin-template": "16.2.0",
-    "@angular-eslint/schematics": "16.2.0",
+    "@angular-eslint/schematics": "^17.0.0",
     "@angular-eslint/template-parser": "16.2.0",
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.12",
