"Update ESLint config and simplify bootstrap error handling"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
   "ignorePatterns": [
     "projects/**/*",
     "**/*.spec.ts",
-    "**/environments/**"
+    "**/environments/**",
+    "main.ts"
   ],
   "overrides": [
     {
